# token-usage

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_EN.md  design-qa.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  publish-release-history.yml  release-windows.yml  release.yml
docs/: architecture.md  build-windows.md  development-plan.md  product-spec.md  release-notes-v1.0.0.md  release-notes-v1.1.0.md  release-notes-v1.1.1.md  release-notes-v1.1.2.md  release-notes-v1.1.3.md  release-notes-v1.1.4.md  release-notes-v1.1.5.md  release-notes-v1.2.0-beta.14.md  release-notes-v1.2.0.md  release-notes-v1.2.1.md  release-notes-windows-v1.0.0.md  roadmap.md  windows-platform-notes.md
docs/adr/: 0001-tauri-react-rust.md  0002-direct-oauth-provider.md  0003-oauth-security-boundary.md  0004-single-refresh-coordinator.md  0005-native-vibrancy-window.md
outputs/: SHA256SUMS-1.2.0-beta.14.txt  SHA256SUMS-1.2.0.txt  SHA256SUMS-1.2.1.txt  SHA256SUMS-Windows-1.0.0.txt  TokenUsage_1.1.3_ReleaseNotes.md  TokenUsage_1.2.0-beta.14_ReleaseNotes.md  TokenUsage_1.2.0_ReleaseNotes.md  TokenUsage_1.2.1_ReleaseNotes.md  TokenUsage_Windows_1.0.0_ReleaseNotes.md
scripts/: build-dmg.sh
src/: App.test.tsx  App.tsx  i18n.ts  styles.css  system.ts  tasks.ts  usage.ts  window.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: liquid_glass.m
src-tauri/src/: credentials.rs  error.rs  lib.rs  main.rs  model.rs  refresh.rs  tasks.rs  tray.rs  usage.rs  window.rs
