[package]
name = "token-usage"
version = "0.1.0"
description = "A macOS monitor for Codex subscription token usage"
edition = "2021"
rust-version = "1.85"

[lib]
name = "token_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8", features = ["tray-icon"] }
thiserror = "2"

[dev-dependencies]
httpmock = "0.8"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"
