[package]
name = "token-usage"
version = "1.2.1"
authors = ["Eric Zhang"]
description = "A cross-platform monitor for Codex subscription token usage"
edition = "2021"
rust-version = "1.85"

[lib]
name = "token_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.40.1"
tauri = { version = "2.8", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
window-vibrancy = "0.6"

[dev-dependencies]
httpmock = "0.8"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"
